# occumend

./: .coverage  .dockerignore  .gitignore  Dockerfile  app.py  onet_knowledge_base.py  pyproject.toml  requirements.txt  vectorize_knowledge_base.py
app/: __init__.py  config.py  data_processing.py  services.py
app/templates/: index.html
tests/: test_app.py
