[project]
name = "occumend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.1.0",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "matplotlib>=3.10.6",
    "numpy>=2.2.6",
    "openai>=1.108.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.1.1",
]
